# python-pksuid

./: .gitignore  LICENSE.txt  README.md  example.py  pyproject.toml
pksuid/: __init__.py  pksuid.py
tests/: test_pksuid.py
